[tool.poetry]
name = "ror"
version = "0.1.2-alpha"
description = "Simple pipelining framework in Python"
authors = ["Patrick Tourniaire <patrick@tourniaire.net>"]
readme = "README.md"


[tool.poe.tasks]
# Formatting and linting scripts
flake8 = "flake8 ."
pyink = "pyink ."
mypy = "mypy ."
clean = ["flake8", "pyink", "mypy"]


[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.5.2"
pyyaml = "^5.3.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pyink = "^23.5.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
pytest = "^7.4.0"
twine = "^4.0.2"
poethepoet = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
